Describe your updates here

--- a/server/.env
+++ b/server/.env
@@ -6,8 +6,7 @@ CLERK_PUBLISHABLE_KEY=pk_test_cmVzdGVkLXNxdWlkLTU0LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_nHtETNeJhOwsc6A5ol1h34OH4AHniK86CGQzqai0ie
 
 # MongoDB
-MONGODB_URL=mongodb+srv://urslikhithsantosh:goli9849@cluster0.plkhk0v.mongodb.net
-
+MONGODB_URI=mongodb+srv://urslikhithsantosh:goli9849@cluster0.plkhk0v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # ImageKit
 IMAGEKIT_PUBLIC_KEY = 'public_4aim08KKKXF3EwRz/sVvhKbllTg='
